Forget Password Done

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -404,5 +404,16 @@
   "no_notifications": "لا يوجد اي اشعارات",
 
   "add_to_cart": "اضف الى العربة",
-  "this_shop_is_closed": "هذا المتجر مغلق، نراك لاحقًا."
+  "this_shop_is_closed": "هذا المتجر مغلق، نراك لاحقًا.",
+
+
+  "password_reset_link_sent": "تم إرسال رابط إعادة تعيين كلمة المرور! تحقق من بريدك الإلكتروني.",
+  "reset_your_password": "إعادة تعيين كلمة المرور",
+  "enter_email_for_reset_link": "أدخل بريدك الإلكتروني لتلقي رابط إعادة تعيين كلمة المرور.",
+  "send_reset_link": "إرسال رابط إعادة التعيين",
+
+  "unregistered_account": "لا يوجد حساب مسجل بهذا البريد الإلكتروني.",
+  "wrong_password": "كلمة المرور غير صحيحة. يرجى المحاولة مرة أخرى.",
+  "invalid_email_format": "صيغة البريد الإلكتروني غير صالحة.",
+  "something_went_wrong": "حدث خطأ ما. يرجى المحاولة مرة أخرى لاحقاً."
 }
